# Crypt

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Start Crypt Dev.cmd  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.js
app/: index.html
benchmarks/: __init__.py  smoke.json
core/: api.py  app_daemon.py  artifact_lifecycle.py  artifacts.py  auth.py  background.py  bench.py  compact.py  doctor.py  evidence.py  file_state.py  final_claims.py  gemini_oauth.py  loop.py  memory.py  oauth.py  openai_oauth.py  permissions.py  prompt.py  redact.py  runtime.py  session.py  settings.py  target_eval.py  tool_policy.py  tool_recovery.py  tracing.py  ui.py  verifiers.py  worktrees.py
crypt/: __init__.py  __main__.py
desktop/: package-lock.json  package.json
docs/: AGENT_D_BLUEPRINT.md  ARCHITECTURE.md  CRYPT_UI_AGENT_BOUNDARY.md  CRYPT_USES_CRYPTCORE_PLAN.md  REFERENCE.md
electron/: main.cjs
tests/: conftest.py  test_app_daemon.py  test_auth.py  test_bash_diagnostics.py  test_bash_safety.py  test_bench_trace_noninteractive.py  test_compact.py  test_eager_tool_dispatch.py  test_edit_file.py  test_file_state.py  test_gemini_oauth.py  test_gemini_provider.py  test_git_tool.py  test_memory_tool.py  test_multi_edit.py  test_ollama_provider.py  test_openai_provider.py  test_permissions.py  test_production_runtime.py  test_read_tools.py  test_registry.py  test_runtime_defaults.py  test_session_redaction.py  test_startup_defaults.py  test_target_eval.py  test_todos_completion.py  test_ui_activity.py  (+2 more)
(+76 files in other folders)
